--- a/app/kevin/index.html
+++ b/app/kevin/index.html
@@ -79,15 +79,11 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>LEMA</h2>
+              <h2>LEMA 12</h2>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="left-content centrartexto">
-				
-              <h2 class="colorverde text-center">CON CADA ACCION ES UN PASO A UN ECUADOR VERDE</h2>
-              
-            </div>
+            <div class="left-content centrartexto"> </div>
           </div>
           <div class="col-md-6">
             <div class="right-image">
